# libxtext

./: CMakeLists.txt  Contributing.md  Makefile  Readme.md  bin.pc.in  bingeneric.c  binio.c  binio.h  binman.h  elf-error.c  elf-error.h  elf-string-data.c  elf-string-data.h  elf.c  elfhandler.c  fshand.c  fshand.h  identify.c  memhand.c  memhand.h  unload.c  unload.h
.github/workflows/: libbinRobot.yml  libelfRobot.yml  robot.yml
include/libelf/: elf-error.h  elf-types.h  elf.h
include/xtext/: common.h  elf_content.h  ext_bin.h  ext_types.h
src/: bin.c  binfront.c  binio.c  binman.c  binparser.c  binparser.h  elfdata.h  elfobject.c  error.c  error.h  fshand.c  fshand.h  generic.c  identify.h  memhand.c  object.h  symbol.c  text_front.c  text_obj.c
src/local/: local_obj.h
